==============
lxml changelog
==============

3.2 (2013-??)
==================

Features added
--------------

Bugs fixed
----------

* LP#673205: Parsing from in-memory strings disabled network access in the
  default parser and made subsequent attempts to parse from a URL fail.

* LP#715687: lxml.html.clean no longer discards scripts that are explicitly
  allowed by the user provided whitelist.

Other changes
-------------


3.1.2 (2013-04-12)
==================

Features added
--------------

Bugs fixed
----------

* LP#1136509: Passing attributes through the namespace-unaware API of
  the sax bridge (i.e. the ``handler.startElement()`` method) failed
  with a ``TypeError``.  Patch by Mike Bayer.

* LP#1123074: Fix serialisation error in XSLT output when converting
  the result tree to a Unicode string.

* GH#105: Replace illegal usage of ``xmlBufLength()`` in libxml2 2.9.0
  by properly exported API function ``xmlBufUse()``.

Other changes
-------------


3.1.1 (2013-03-29)
==================

Features added
--------------

Bugs fixed
----------

* LP#1160386: Write access to ``lxml.html.FormElement.fields`` raised
  an AttributeError in Py3.

* Illegal memory access during cleanup in incremental xmlfile writer.

Other changes
-------------

* The externally useless class ``lxml.etree._BaseParser`` was removed
  from the module dict.


3.1.0 (2013-02-10)
==================

Features added
--------------

* GH#89: lxml.html.clean allows overriding the set of attributes that it
  considers 'safe'.  Patch by Francis Devereux.

Bugs fixed
----------

* LP#1104370: ``copy.copy(el.attrib)`` raised an exception.  It now returns
  a copy of the attributes as a plain Python dict.

* GH#95: When used with namespace prefixes, the  ``el.find*()`` methods
  always used the first namespace mapping that was provided for each
  path expression instead of using the one that was actually passed
  in for the current run.
