@@ -399,9 +399,14 @@ class Cleaner(object):
         if self.add_nofollow:
             for el in _find_external_links(doc):
                 if not self.allow_follow(el):
-                    rel = 'nofollow'
-                    if el.get('rel'):
-                        rel = el.get('rel') + ' ' + rel
+                    rel = el.get('rel')
+                    if rel:
+                        if ('nofollow' in rel
+                                and ' nofollow ' in (' %s ' % rel)):
+                            continue
+                        rel = '%s nofollow' % rel
+                    else:
+                        rel = 'nofollow'
                     el.set('rel', rel)
 
     def allow_follow(self, anchor):
